--- a/FitlyApp/atv-form-main/index.html
+++ b/FitlyApp/atv-form-main/index.html
@@ -26,7 +26,7 @@
           <label class="opcao">
             <input type="radio" name="genero" value="Masculino" required />Masculino
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="genero" value="Feminino" required />Feminino 
           </label>
         </form>
@@ -55,16 +55,16 @@
         <p>Nível de Atividade Física</p>
         <form action="#">
           <h3>Com que frequência você se exercita?</h3>
-          <label>
+          <label class="opcao">
             <input type="radio" name="frequencia" value="1" required />Sedentário
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="frequencia" value="2" required />Levemente Ativo (1-3 dias/semana)
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="frequencia" value="3" required />Moderadamente Ativo (3-5 dias/semana)
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="frequencia" value="4" required />Muito Ativo (6-7 dias/semana)
           </label>
         </form>
@@ -76,13 +76,13 @@
         <p>Qual é o seu principal objetivo?</p>
         <form action="#">
           <h3>Selecione uma das opções abaixo:</h3>
-          <label>
+          <label class="opcao">
             <input type="radio" name="meta" value="1" required />Perder Gordura (Emagrecer)
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="meta" value="2" required />Manter o peso (Mais saúde e disposição)
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="meta" value="3" required />Ganhar Massa Muscular (Hipertrofia)
           </label>
         </form>
@@ -94,16 +94,16 @@
         <p>Hábitos de Fim de Semana</p>
         <form action="#">
           <h3>Você costuma comer um pouco mais nos finais de semana?</h3>
-          <label>
+          <label class="opcao">
             <input type="radio" name="Flexibilidade" value="1" required />Não, tenho uma rotina consistente
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="Flexibilidade" value="2" required />Sim, no Sábado e Domingo
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="Flexibilidade" value="3" required />Sim, apenas no Sábado
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="Flexibilidade" value="4" required />Sim, na Sexta, Sábado e Domingo
           </label>
         </form>
@@ -115,13 +115,13 @@
         <p>Conte-nos mais sobre sua dieta</p>
         <form action="#">
           <h3>Você segue algum tipo de dieta específica?</h3>
-          <label>
+          <label class="opcao">
             <input type="radio" name="preferencias" value="1" required />Nenhuma específica (Onívoro)
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="preferencias" value="2"  required />Vegetariana
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="preferencias" value="3" required />Vegana
           </label>
         </form>
@@ -133,13 +133,13 @@
         <p>Entender seu 'porquê' nos ajuda a te apoiar</p>
         <form action="#">
           <h3>O que mais te motiva a alcançar seu objetivo?</h3>
-          <label>
+          <label class="opcao">
             <input type="radio" name="motivacao" value="1" required />Melhorar a saúde e bem-estar
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="motivacao" value="2" required />Estética e autoconfiança
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="motivacao" value="3" required />Mais energia e disposição
           </label>
         </form>
@@ -151,10 +151,10 @@
         <p>Informações de Saúde</p>
         <form action="#">
           <h3>Você possui alguma condição médica, lesão ou restrição alimentar importante?</h3>
-          <label>
+          <label class="opcao">
             <input type="radio" name="saude" value="1" required />Sim
           </label>
-          <label>
+          <label class="opcao">
             <input type="radio" name="saude" value="2" required />Não
           </label>
         </form>
