--- a/FitlyApp/Formulario/index.html
+++ b/FitlyApp/Formulario/index.html
@@ -24,21 +24,25 @@
       </div>
 
       <form action="#">
-        <h4>Nome</h4>
+        <h4 onclick="document.getElementById('nome').focus()">Nome: </h4>
         <label class="texto">
-          <input type="text" placeholder="Seu nome" id="nome" required />
+          <input type="text" placeholder="Seu nome" id="nome" required >
         </label>
-        <h4>Idade</h4>
+        <h4 onclick="document.getElementById('nome').focus()">Email: </h4>
         <label class="texto">
-          <input type="number" placeholder="Sua idade" min="0" id="idade" required />
+          <input type="text" placeholder="Seu email" id="email" required >
+        </label>
+        <h4 onclick="document.getElementById('idade').focus()">Idade: </h4>
+        <label class="texto">
+          <input type="number" placeholder="Sua idade" min="0" id="idade" required >
         </label>
 
         <h4>Sexo</h4>
         <label class="opcao">
-          <input type="radio" name="genero" value="Masculino" required />Masculino
+          <input type="radio" name="genero" value="Masculino" required>Masculino
         </label>
         <label class="opcao">
-          <input type="radio" name="genero" value="Feminino" required />Feminino
+          <input type="radio" name="genero" value="Feminino" required>Feminino
         </label>
       </form>
 
@@ -55,14 +59,13 @@
         <div class="vazio"></div>
       </div>
       <form action="#">
-        <h4>Qual sua altura? (cm)</h4>
+        <h4 onclick="document.getElementById('altura').focus()">Qual a sua altura? (cm)</h4>
         <label class="texto">
-          <input type="number" placeholder="Ex: 175" id="altura" required />
+          <input type="number" placeholder="Ex: 175" id="altura" required>
         </label>
-        <h4>Qual seu peso? (kg)</h4>
+        <h4 onclick="document.getElementById('peso').focus()">Qual seu peso? (kg)</h4>
         <label class="texto">
-
-          <input type="number" placeholder="Ex: 70.5" id="peso" required />
+          <input type="number" placeholder="Ex: 70.5" id="peso" required>
         </label>
       </form>
       <button type="button" onclick="vaiPagina3()">Próximo</button>
@@ -81,16 +84,16 @@
       <form action="#">
         <h3>Com que frequência você se exercita?</h3>
         <label class="opcao">
-          <input type="radio" name="frequencia" value="1" required />Sedentário
+          <input type="radio" name="frequencia" value="1" required>Sedentário
         </label>
         <label class="opcao">
-          <input type="radio" name="frequencia" value="2" required />Levemente Ativo (1-3 dias/semana)
+          <input type="radio" name="frequencia" value="2" required>Levemente Ativo (1-3 dias/semana)
         </label>
         <label class="opcao">
-          <input type="radio" name="frequencia" value="3" required />Moderadamente Ativo (3-5 dias/semana)
+          <input type="radio" name="frequencia" value="3" required>Moderadamente Ativo (3-5 dias/semana)
         </label>
         <label class="opcao">
-          <input type="radio" name="frequencia" value="4" required />Muito Ativo (6-7 dias/semana)
+          <input type="radio" name="frequencia" value="4" required>Muito Ativo (6-7 dias/semana)
         </label>
       </form>
       <button type="button" onclick="vaiPagina4()">Próximo</button>
@@ -109,13 +112,13 @@
       <form action="#">
         <h3>Selecione uma das opções abaixo:</h3>
         <label class="opcao">
-          <input type="radio" name="meta" value="1" required />Perder Gordura (Emagrecer)
+          <input type="radio" name="meta" value="1" required>Perder Gordura (Emagrecer)
         </label>
         <label class="opcao">
-          <input type="radio" name="meta" value="2" required />Manter o peso (Mais saúde e disposição)
+          <input type="radio" name="meta" value="2" required>Manter o peso (Mais saúde e disposição)
         </label>
         <label class="opcao">
-          <input type="radio" name="meta" value="3" required />Ganhar Massa Muscular (Hipertrofia)
+          <input type="radio" name="meta" value="3" required>Ganhar Massa Muscular (Hipertrofia)
         </label>
       </form>
       <button type="button" onclick="vaiPagina5()">Próximo</button>
@@ -134,16 +137,16 @@
       <form action="#">
         <h3>Você costuma comer um pouco mais nos finais de semana?</h3>
         <label class="opcao">
-          <input type="radio" name="Flexibilidade" value="1" required />Não, tenho uma rotina consistente
+          <input type="radio" name="Flexibilidade" value="1" required>Não, tenho uma rotina consistente
         </label>
         <label class="opcao">
-          <input type="radio" name="Flexibilidade" value="2" required />Sim, no Sábado e Domingo
+          <input type="radio" name="Flexibilidade" value="2" required>Sim, no Sábado e Domingo
         </label>
         <label class="opcao">
-          <input type="radio" name="Flexibilidade" value="3" required />Sim, apenas no Sábado
+          <input type="radio" name="Flexibilidade" value="3" required>Sim, apenas no Sábado
         </label>
         <label class="opcao">
-          <input type="radio" name="Flexibilidade" value="4" required />Sim, na Sexta, Sábado e Domingo
+          <input type="radio" name="Flexibilidade" value="4" required>Sim, na Sexta, Sábado e Domingo
         </label>
       </form>
       <button type="button" onclick="vaiPagina6()">Próximo</button>
@@ -162,13 +165,13 @@
       <form action="#">
         <h3>Você segue algum tipo de dieta específica?</h3>
         <label class="opcao">
-          <input type="radio" name="preferencias" value="1" required />Nenhuma específica (Onívoro)
+          <input type="radio" name="preferencias" value="1" required>Nenhuma específica (Onívoro)
         </label>
         <label class="opcao">
-          <input type="radio" name="preferencias" value="2" required />Vegetariana
+          <input type="radio" name="preferencias" value="2" required>Vegetariana
         </label>
         <label class="opcao">
-          <input type="radio" name="preferencias" value="3" required />Vegana
+          <input type="radio" name="preferencias" value="3" required>Vegana
         </label>
       </form>
       <button type="button" onclick="vaiPagina7()">Próximo</button>
@@ -187,13 +190,13 @@
       <form action="#">
         <h3>O que mais te motiva a alcançar seu objetivo?</h3>
         <label class="opcao">
-          <input type="radio" name="motivacao" value="1" required />Melhorar a saúde e bem-estar
+          <input type="radio" name="motivacao" value="1" required>Melhorar a saúde e bem-estar
         </label>
         <label class="opcao">
-          <input type="radio" name="motivacao" value="2" required />Estética e autoconfiança
+          <input type="radio" name="motivacao" value="2" required>Estética e autoconfiança
         </label>
         <label class="opcao">
-          <input type="radio" name="motivacao" value="3" required />Mais energia e disposição
+          <input type="radio" name="motivacao" value="3" required>Mais energia e disposição
         </label>
       </form>
       <button type="button" onclick="vaiPagina8()">Próximo</button>
@@ -212,10 +215,10 @@
       <form action="#">
         <h3>Você possui alguma condição médica, lesão ou restrição alimentar importante?</h3>
         <label class="opcao">
-          <input type="radio" name="saude" value="1" required />Sim
+          <input type="radio" name="saude" value="1" required>Sim
         </label>
         <label class="opcao">
-          <input type="radio" name="saude" value="2" required />Não
+          <input type="radio" name="saude" value="2" required>Não
         </label>
       </form>
       <button type="button" onclick="vaiPagina9(), calcTudo()">Próximo</button>
